Izvrsena migracija backend-a na OpenAlchemy API-first arhitekturu
