# backend/models.py
@@ -1,0 +1,352 @@
+"""Autogenerated SQLAlchemy models based on OpenAlchemy models."""
+# pylint: disable=no-member,super-init-not-called,unused-argument
+
+import typing
+
+import sqlalchemy
+from sqlalchemy import orm
+
+from open_alchemy import models
+
+Base = models.Base  # type: ignore
+
+
+class _KorisnikDictBase(typing.TypedDict, total=True):
+    """TypedDict for properties that are required."""
+
+    username: str
+    password: str
+
+
+class KorisnikDict(_KorisnikDictBase, total=False):
+    """TypedDict for properties that are not required."""
+
+    id: int
+
+
+class TKorisnik(typing.Protocol):
+    """
+    SQLAlchemy model protocol.
+
+    Attrs:
+        id: The id of the Korisnik.
+        username: The username of the Korisnik.
+        password: The password of the Korisnik.
+
+    """
+
+    # SQLAlchemy properties
+    __table__: sqlalchemy.Table
+    __tablename__: str
+    query: orm.Query
+
+    # Model properties
+    id: 'sqlalchemy.Column[int]'
+    username: 'sqlalchemy.Column[str]'
+    password: 'sqlalchemy.Column[str]'
+
+    def __init__(self, username: str, password: str, id: typing.Optional[int] = None) -> None:
+        """
+        Construct.
+
+        Args:
+            id: The id of the Korisnik.
+            username: The username of the Korisnik.
+            password: The password of the Korisnik.
+
+        """
+        ...
+
+    @classmethod
+    def from_dict(cls, username: str, password: str, id: typing.Optional[int] = None) -> "TKorisnik":
+        """
+        Construct from a dictionary (eg. a POST payload).
+
+        Args:
+            id: The id of the Korisnik.
+            username: The username of the Korisnik.
+            password: The password of the Korisnik.
+
+        Returns:
+            Model instance based on the dictionary.
+
+        """
+        ...
+
+    @classmethod
+    def from_str(cls, value: str) -> "TKorisnik":
+        """
+        Construct from a JSON string (eg. a POST payload).
+
+        Returns:
+            Model instance based on the JSON string.
+
+        """
+        ...
+
+    def to_dict(self) -> KorisnikDict:
+        """
+        Convert to a dictionary (eg. to send back for a GET request).
+
+        Returns:
+            Dictionary based on the model instance.
+
+        """
+        ...
+
+    def to_str(self) -> str:
+        """
+        Convert to a JSON string (eg. to send back for a GET request).
+
+        Returns:
+            JSON string based on the model instance.
+
+        """
+        ...
+
+
+Korisnik: typing.Type[TKorisnik] = models.Korisnik  # type: ignore
+
+
+class _VoziloDictBase(typing.TypedDict, total=True):
+    """TypedDict for properties that are required."""
+
+    user_id: int
+    marka: str
+    model: str
+
+
+class VoziloDict(_VoziloDictBase, total=False):
+    """TypedDict for properties that are not required."""
+
+    id: int
+    potrosnja: typing.Optional[float]
+    cena_goriva: typing.Optional[float]
+    registracija: typing.Optional[str]
+
+
+class TVozilo(typing.Protocol):
+    """
+    SQLAlchemy model protocol.
+
+    Attrs:
+        id: The id of the Vozilo.
+        user_id: ID korisnika (majstora) kome vozilo pripada
+        marka: The marka of the Vozilo.
+        model: The model of the Vozilo.
+        potrosnja: The potrosnja of the Vozilo.
+        cena_goriva: The cena_goriva of the Vozilo.
+        registracija: Datum isteka registracije vozila (format: MM-DD-YYYY)
+
+    """
+
+    # SQLAlchemy properties
+    __table__: sqlalchemy.Table
+    __tablename__: str
+    query: orm.Query
+
+    # Model properties
+    id: 'sqlalchemy.Column[int]'
+    user_id: 'sqlalchemy.Column[int]'
+    marka: 'sqlalchemy.Column[str]'
+    model: 'sqlalchemy.Column[str]'
+    potrosnja: 'sqlalchemy.Column[typing.Optional[float]]'
+    cena_goriva: 'sqlalchemy.Column[typing.Optional[float]]'
+    registracija: 'sqlalchemy.Column[typing.Optional[str]]'
+
+    def __init__(self, user_id: int, marka: str, model: str, id: typing.Optional[int] = None, potrosnja: typing.Optional[float] = None, cena_goriva: typing.Optional[float] = None, registracija: typing.Optional[str] = None) -> None:
+        """
+        Construct.
+
+        Args:
+            id: The id of the Vozilo.
+            user_id: ID korisnika (majstora) kome vozilo pripada
+            marka: The marka of the Vozilo.
+            model: The model of the Vozilo.
+            potrosnja: The potrosnja of the Vozilo.
+            cena_goriva: The cena_goriva of the Vozilo.
+            registracija: Datum isteka registracije vozila (format: MM-DD-YYYY)
+
+        """
+        ...
+
+    @classmethod
+    def from_dict(cls, user_id: int, marka: str, model: str, id: typing.Optional[int] = None, potrosnja: typing.Optional[float] = None, cena_goriva: typing.Optional[float] = None, registracija: typing.Optional[str] = None) -> "TVozilo":
+        """
+        Construct from a dictionary (eg. a POST payload).
+
+        Args:
+            id: The id of the Vozilo.
+            user_id: ID korisnika (majstora) kome vozilo pripada
+            marka: The marka of the Vozilo.
+            model: The model of the Vozilo.
+            potrosnja: The potrosnja of the Vozilo.
+            cena_goriva: The cena_goriva of the Vozilo.
+            registracija: Datum isteka registracije vozila (format: MM-DD-YYYY)
+
+        Returns:
+            Model instance based on the dictionary.
+
+        """
+        ...
+
+    @classmethod
+    def from_str(cls, value: str) -> "TVozilo":
+        """
+        Construct from a JSON string (eg. a POST payload).
+
+        Returns:
+            Model instance based on the JSON string.
+
+        """
+        ...
+
+    def to_dict(self) -> VoziloDict:
+        """
+        Convert to a dictionary (eg. to send back for a GET request).
+
+        Returns:
+            Dictionary based on the model instance.
+
+        """
+        ...
+
+    def to_str(self) -> str:
+        """
+        Convert to a JSON string (eg. to send back for a GET request).
+
+        Returns:
+            JSON string based on the model instance.
+
+        """
+        ...
+
+
+Vozilo: typing.Type[TVozilo] = models.Vozilo  # type: ignore
+
+
+class _PopravkaDictBase(typing.TypedDict, total=True):
+    """TypedDict for properties that are required."""
+
+    user_id: int
+    opis: str
+    vozilo_id: int
+
+
+class PopravkaDict(_PopravkaDictBase, total=False):
+    """TypedDict for properties that are not required."""
+
+    id: int
+    km: typing.Optional[float]
+    zarada: typing.Optional[float]
+    dodatni_trosak: typing.Optional[float]
+    datum: typing.Optional[str]
+    profit: typing.Optional[float]
+
+
+class TPopravka(typing.Protocol):
+    """
+    SQLAlchemy model protocol.
+
+    Attrs:
+        id: The id of the Popravka.
+        user_id: ID majstora koji je obavio posao
+        opis: The opis of the Popravka.
+        vozilo_id: ID vozila kojim je majstor stigao na lokaciju
+        km: The km of the Popravka.
+        zarada: The zarada of the Popravka.
+        dodatni_trosak: The dodatni_trosak of the Popravka.
+        datum: The datum of the Popravka.
+        profit: The profit of the Popravka.
+
+    """
+
+    # SQLAlchemy properties
+    __table__: sqlalchemy.Table
+    __tablename__: str
+    query: orm.Query
+
+    # Model properties
+    id: 'sqlalchemy.Column[int]'
+    user_id: 'sqlalchemy.Column[int]'
+    opis: 'sqlalchemy.Column[str]'
+    vozilo_id: 'sqlalchemy.Column[int]'
+    km: 'sqlalchemy.Column[typing.Optional[float]]'
+    zarada: 'sqlalchemy.Column[typing.Optional[float]]'
+    dodatni_trosak: 'sqlalchemy.Column[typing.Optional[float]]'
+    datum: 'sqlalchemy.Column[typing.Optional[str]]'
+    profit: 'sqlalchemy.Column[typing.Optional[float]]'
+
+    def __init__(self, user_id: int, opis: str, vozilo_id: int, id: typing.Optional[int] = None, km: typing.Optional[float] = None, zarada: typing.Optional[float] = None, dodatni_trosak: typing.Optional[float] = None, datum: typing.Optional[str] = None, profit: typing.Optional[float] = None) -> None:
+        """
+        Construct.
+
+        Args:
+            id: The id of the Popravka.
+            user_id: ID majstora koji je obavio posao
+            opis: The opis of the Popravka.
+            vozilo_id: ID vozila kojim je majstor stigao na lokaciju
+            km: The km of the Popravka.
+            zarada: The zarada of the Popravka.
+            dodatni_trosak: The dodatni_trosak of the Popravka.
+            datum: The datum of the Popravka.
+            profit: The profit of the Popravka.
+
+        """
+        ...
+
+    @classmethod
+    def from_dict(cls, user_id: int, opis: str, vozilo_id: int, id: typing.Optional[int] = None, km: typing.Optional[float] = None, zarada: typing.Optional[float] = None, dodatni_trosak: typing.Optional[float] = None, datum: typing.Optional[str] = None, profit: typing.Optional[float] = None) -> "TPopravka":
+        """
+        Construct from a dictionary (eg. a POST payload).
+
+        Args:
+            id: The id of the Popravka.
+            user_id: ID majstora koji je obavio posao
+            opis: The opis of the Popravka.
+            vozilo_id: ID vozila kojim je majstor stigao na lokaciju
+            km: The km of the Popravka.
+            zarada: The zarada of the Popravka.
+            dodatni_trosak: The dodatni_trosak of the Popravka.
+            datum: The datum of the Popravka.
+            profit: The profit of the Popravka.
+
+        Returns:
+            Model instance based on the dictionary.
+
+        """
+        ...
+
+    @classmethod
+    def from_str(cls, value: str) -> "TPopravka":
+        """
+        Construct from a JSON string (eg. a POST payload).
+
+        Returns:
+            Model instance based on the JSON string.
+
+        """
+        ...
+
+    def to_dict(self) -> PopravkaDict:
+        """
+        Convert to a dictionary (eg. to send back for a GET request).
+
+        Returns:
+            Dictionary based on the model instance.
+
+        """
+        ...
+
+    def to_str(self) -> str:
+        """
+        Convert to a JSON string (eg. to send back for a GET request).
+
+        Returns:
+            JSON string based on the model instance.
+
+        """
+        ...
+
+
+Popravka: typing.Type[TPopravka] = models.Popravka  # type: ignore
